# CodeGuardian

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scan_my_code.py
graders/: easy_grader.py  hard_grader.py  medium_grader.py
server/: app.py  security_env.py
tasks/: easy_tasks.py  hard_tasks.py  medium_tasks.py
utils/: ast_analyzer.py  pattern_matcher.py  scanner.py
